third_party/move/move-compiler/tests/move_check/parser/invalid_call_lhs_complex_expression2.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_call_lhs_complex_expression2.move:3:29
  │
3 │         (if (true) 5 else 0)();
  │                             ^
  │                             │
  │                             Unexpected '('
  │                             Expected ';'

